# cmux-windows

./: .gitignore  README.ja.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  shortcuts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs  pty_manager.rs  settings.rs
src/components/: DropZoneOverlay.tsx  NotificationPanel.tsx  ResizeHandle.tsx  SettingsModal.tsx  Sidebar.tsx  SplitContainer.tsx  SplitFrame.tsx  Terminal.tsx  TextBoxInput.tsx  UpdateNotice.tsx
src/hooks/: useNotifications.ts  usePty.ts
src/styles/: global.css
src/types/: notification.ts  split.ts
src/utils/: layout.ts  oscParser.ts
