[package]
name = "cmux-windows"
version = "0.2.0"
description = "Terminal emulator with TextBox input mode for Windows"
authors = ["megum"]
edition = "2021"

[lib]
name = "cmux_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
log = "0.4"
env_logger = "0.11"
